# nomad_postulation

./: .gitignore  LICENSE  README.md  docker-compose.yml
nomad-server/: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
nomad-server/api/routers/: __init__.py
nomad-server/api/routers/endpoints/: carts.py
nomad-ui/: .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  quasar.config.js
nomad-ui/src/components/checkoutPage/detail/: DetailTable.vue  ProductDetail.vue
nomad-ui/src/components/checkoutPage/resume/: ResumeTable.vue
nomad-ui/src/components/commons/: HomeButton.vue
nomad-ui/src/layouts/: MainLayout.vue
nomad-ui/src/middleware/: carts.js  index.js  pipeline.js
nomad-ui/src/models/: carts.ts  products.ts
nomad-ui/src/pages/: CheckoutPage.vue  HomePage.vue
nomad-ui/src/router/: index.ts  routes.ts
nomad-ui/src/services/: carts.js  checkout.js
nomad-ui/src/stores/: carts.ts
