[tool.poetry]
name = "nomad-server"
version = "0.1.0"
description = ""
authors = ["Alexandra <alexandra.ibarra.c@gmail.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
